# rust-notes

./: DEBUG.md  INSTALLATION_&_RUNNING_PROGRAMS.md  OWNERSHIP.md  README.md  STRINGS.md
axum/: Cargo.toml  Makefile  README.md
axum/src/: main.rs  vehicle.rs  vehicles.rs
axum/tests/: quick_dev.rs
demo/src/: main.rs
hello_world/src/: main.rs
learn_to_code_with_rust/: README.md
learn_to_code_with_rust/variables-and-mutability/src/: main.rs
notes/: DEBUG.md  ENUMS.md  INSTALLATION_&_RUNNING_PROGRAMS.md  OPTION.md  OWNERSHIP.md  STRINGS.md  STRUCTS_&_IMPLEMENTATIONS.md
rust-in-action/ch1/penguins/src/: main.rs
rust-in-action/ch4/cube_sat_constellation/: Cargo.toml
rust-in-action/ch4/cube_sat_constellation/src/: main.rs
the_rust_programming_language/: Cargo.toml
