[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={ version = "1", features = ["full"]}
# Serde / json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.7", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["full"] }
uuid = { version = "1.19.0", features = ["fast-rng", "v7"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.10"
