[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={ version = "1", features = ["full"]}
# Serde / json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.7", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["full"] }
uuid = { version = "1.19.0", features = ["fast-rng", "v7"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.10"
